--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ApiInfo]
-apiTokenId=4923937e-cc67-4903-9180-5811a987c807@tokens.virtru.com
-apiTokenSecret=1ZLQ2M1w2Dmji6oP/10q/yRpFexS7VI3udOVdMxKVdE=
-apiHost=audit-develop01.develop.virtru.com
+apiTokenId=
+apiTokenSecret=
+apiHost=audit.virtru.com
 apiPath=/api/messages
