CC-78:code refactor (#2)
* refactored code

* added rfc5424 syslog format

* adde try/except

* fixed logger

* README adjustments

* Fix typo

* updated readme

* fixed typo

* fixed syslog

* updated readme

* fixed typo

* use last recordid as bookmark

* fixed lint

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ApiInfo]
-apiTokenId=<VIRTRU PROVIDED>
-apiTokenSecret=<VIRTRU PROVIDED>
+apiTokenId=
+apiTokenSecret=
 apiHost=audit.virtru.com
 apiPath=/api/messages
