--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ApiInfo]
-apiTokenId=
-apiTokenSecret=
-apiHost=
-apiPath=
+apiTokenId=<Virtru Provided>
+apiTokenSecret=<Virtru Provided>
+apiHost=audit.virtru.com
+apiPath=/api/messages
