added header to request

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ApiInfo]
 apiTokenId=<Virtru Provided>
 apiTokenSecret=<Virtru Provided>
-apiHost=audit-develop01.develop.virtru.com
+apiHost=audit.virtru.com
 apiPath=/api/messages
