fixed too many files open

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ApiInfo]
-apiTokenId=<Virtru Provided>
-apiTokenSecret=<Virtru Provided>
+apiTokenId=
+apiTokenSecret=
 apiHost=audit.virtru.com
 apiPath=/api/messages
