CC-299: Fix python script (#4)
* added some tests

* more tests

* fixed tests

* more fixex

* code refactor

* fixed more tests

* added large tests

* fixed script

* added header to request

* fixed too many files open

* close socket

* added -v flag

* fixed syslog

* cleaned code

* ignore py_cache"
;

* removed package.json

* fixed issues

* updated changelog

* updated chaged log again

--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,16 @@ verify_ssl = true
 name = "pypi"
 
 [scripts]
-start = "python virtru-audit-client"
+start = "python -m auditexport"
+test = "pytest"
 
 [packages]
 requests = "*"
 pyjwt = "*"
 "rfc5424-logging-handler" = "*"
+pytest = "*"
+"iso8601" = "*"
 
 [dev-packages]
 pylint = "*"
 "autopep8" = "*"
-
-
