--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [ApiInfo]
-apiTokenId=<Virtru Provided>
-apiTokenSecret=<Virtru Provided>
+apiTokenId=90d38309-26e4-4642-b7e1-d2b4cbd88dac@tokens.virtru.com
+apiTokenSecret=FWX+uAFszsByIgxyvNUQOvVRyVnOWtF9HnkpF1iT+R4=
 apiHost=audit.virtru.com
 apiPath=/api/messages
