--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 version: "3.7"
 services:
-  tests:
+  app:
     image: python:3
     working_dir: /usr/src/app
     volumes:
       - ./:/usr/src/app
+    command: sh .buildkite/scripts/run-docker-tests.sh
