--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -2,7 +2,7 @@
 - label: ":docker: Run Docker Tests"
   plugins:
     - docker-compose#v3.0.0:
-        run: app
+        run: tests
         config:
           - docker-compose.yml
 
