CD-1325 Python Script for Audit V2.0

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,3 @@
-[ApiInfo]
-apiTokenId=<Virtru Provided>
-apiTokenSecret=<Virtru Provided>
-apiHost=audit.virtru.com
-apiPath=/api/messages
+[DEFAULT]
+API_TOKEN=AAAA_Provided_by_Virtru_AAA=
+API_TOKEN_ID=Provided_by_Virtru@tokens.virtru.com
